--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: psikoz
 description: Physcology Social Media.
 publish_to: 'none'
-version: 1.7.0+1
+version: 1.8.0+2
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -49,6 +49,10 @@ dependencies:
   get_storage: ^2.0.3
   file_picker: ^5.2.4
   flutter_colorpicker: ^1.0.3
+  shimmer: ^2.0.0
+  flutter_datetime_picker: ^1.5.1
+  audio_waveforms: ^1.0.1
+  path_provider: ^2.0.11
  
 
 dev_dependencies:
